--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   lottie: ^1.2.1
   permission_handler: 8.1.6
   camera: ^0.9.4+5
+  tflite_flutter: ^0.9.0
+  image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
